<resources>
    <string name="app_name">Court Counter</string>
    <string name="teamA">Team A</string>
    <string name="teamB">Team B</string>
    <string name="teamC">Team C</string>
    <string name="score">score</string>
    <string name="points3">+3 Points</string>
    <string name="points2">+2 Points</string>
    <string name="freethrow">Free Throw</string>
    <string name="reset">Reset</string>
</resources>
