<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/court"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/layout_first"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:context="com.example.android.courtcounter.MainActivity">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/backgroundcolor"
                android:text="@string/teamA" />

            <TextView
                android:id="@+id/team_a_score"
                android:autoSizeTextType="uniform"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/backgroundcolor"
                android:text="@string/score" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:onClick="points3TeamA"
                android:text="@string/points3"
                android:textAllCaps="true" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:onClick="points2TeamA"
                android:text="@string/points2"
                android:textAllCaps="true" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:onClick="freeThrowTeamA"
                android:text="@string/freethrow"
                android:textAllCaps="true" />


        </LinearLayout>

        <!--<LinearLayout-->
            <!--android:layout_width="1dp"-->
            <!--android:layout_height="300dp"-->
            <!--android:background="@android:color/darker_gray">-->
            <!--android:layout_weight="1"-->
        <!--</LinearLayout>-->

        <LinearLayout

            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:context="com.example.android.courtcounter.MainActivity">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/backgroundcolor"
                android:text="@string/teamB" />

            <TextView
                android:id="@+id/team_b_score"
                android:autoSizeTextType="uniform"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/backgroundcolor"
                android:text="@string/score" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:onClick="points3TeamB"
                android:text="@string/points3"
                android:textAllCaps="true" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:onClick="points2TeamB"
                android:text="@string/points2"
                android:textAllCaps="true" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:onClick="freeThrowTeamB"
                android:text="@string/freethrow"
                android:textAllCaps="true" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:onClick="ResetButton"
                android:text="@string/reset"
                android:textAllCaps="true" />


        </LinearLayout>

        <!--<LinearLayout-->
            <!--android:layout_width="1dp"-->
            <!--android:layout_height="300dp"-->
            <!--android:background="@android:color/darker_gray">-->
            <!--android:layout_weight="1"</LinearLayout>-->

        <LinearLayout

            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:context="com.example.android.courtcounter.MainActivity">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/backgroundcolor"
                android:text="@string/teamB" />

            <TextView
                android:id="@+id/team_c_score"
                android:autoSizeTextType="uniform"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/backgroundcolor"
                android:text="@string/score" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:onClick="points3TeamC"
                android:text="@string/points3"
                android:textAllCaps="true" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:onClick="points2TeamC"
                android:text="@string/points2"
                android:textAllCaps="true" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:onClick="freeThrowTeamC"
                android:text="@string/freethrow"
                android:textAllCaps="true" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="300dp"
            android:background="@android:color/darker_gray">
            android:layout_weight="1"
        </LinearLayout>

    </LinearLayout>

</ScrollView>
